pyinterp/pyinterp/pyinterp/tests/must_pass/math/errors/sqrt_domain1.py
print(math.sqrt(-1.0))